# Flemme

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: routes.py  schemas.py
app/core/: __init__.py  alternatives.py  astar.py  costs.py  directions.py  edge_naming.py  explanations.py  geojson.py  grade.py  models.py  pareto.py  smoothing.py  snapping.py  split_segments.py
app/db/: repositories.py  schema.sql  session.py
app/debug/: __init__.py  export_route.py
app/google/: __init__.py  elevation_fallback.py  geocoding.py  routes_baseline.py
app/ingest/: datasf_import.py  dem_import.py  elevation.py  graph_builder.py  load_sf_graph.py  name_graph_edges.py  osm_import.py  preprocess.py
migrations/: env.py
migrations/versions/: 0001_initial_walk_graph.py
tests/: test_alternatives.py  test_astar.py  test_costs.py  test_datasf_import.py  test_directions.py  test_edge_naming.py  test_elevation.py  test_explanations.py  test_export_route.py  test_geojson.py  test_grade.py  test_graph_builder.py  test_osm_import.py  test_real_graph_route.py  test_route_ab_example.py  test_smoothing.py  test_split_segments.py
tests/fixtures/: synthetic_sf_hill_graph.json
