[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flemme"
version = "0.1.0"
description = "Hill-aware walking navigation engine for San Francisco."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "geoalchemy2>=0.14",
  "numpy>=1.26",
  "pydantic>=2.7",
  "pyproj>=3.6",
  "scipy>=1.12",
  "shapely>=2.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]
dem = [
  "rasterio>=1.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = []
